[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1" # 
askama = "0.11"
darling = "0.13" # 可以很方便的处理宏里面的attributes
proc-macro2 = "1" # proc-macro的封装
quote = "1" # 用于生成代码的TokenStream
syn = { version = "1", features = ["extra-traits"] } # 用于解析TokenStream 使用extra-traits 可以用于Debug
